--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -119,6 +119,9 @@
       max-width: none !important;
    }
    
+   .hide-mobile { display: none !important; }
+   .show-mobile { display: block !important; }
+   
    /* mobile navigation
    -------------------------------------------------------------------- */
    #nav-wrap {
